--- a/html-css/css/plan.css
+++ b/html-css/css/plan.css
@@ -1,15 +1,22 @@
 body{
     background: wheat;
-    
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    font-size: 45px;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 section{
-    height: 300px;
+    height: 200px;
     width: 80%;
-
 }
 
-div{
-    height: 100%;
-    width: 100%;
+footer{
+    height: 300px;
+    margin: 2854px auto;
+    padding: 0;
 }
