--- a/html-css/css/integration.css
+++ b/html-css/css/integration.css
@@ -10,25 +10,49 @@ header{
 }
 
 nav{
-    border: 1px solid black;
-    background: black;
-    color: #fff;
+    float: left;
     height: 50px;
-    width: 40%;
     text-align: center;
+    padding-top: 30px;
+    margin: 0 15% 0 15%;
 
 }
 ul{
     list-style-type: none;
+    float: right;
+    margin: 0;
+    padding: 0;
+    padding-top: 2%;
+}
+li{
+    float: left;
+    width: 25%;
 }
 .A{
-    font-size: 24px;
+    font-size: 20px;
     text-transform: uppercase;
 }
 
-section {
+li a{
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding: 16px 18px;
+    background: black;
+}
+
+li a:hover{
+    background: grey;
+}
+section{
     width: 960px;
     margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+h2{
+    text-align: center;
 }
 
 .PZ1{
@@ -39,15 +63,29 @@ section {
 
 .PZ{
     background: url(../../html-css/integration_01/img/32x32.gif) no-repeat;
-    height: 240px;
+    height: auto;
     width: 240px;
     font-size: 11px;
     float: left;
     text-align: end;
 }
 
+.clear{
+    clear: both;
+}
+
+.B1{
+    width: 960px
+}
 .B{
     font-size: 18px;
     text-transform: lowercase;
     color: gold;
+}
+
+.PZ2{
+    height: auto;
+    width: 320px;
+    font-size: 11px;
+    float: left;
 }
