--- a/TP/TP6/css/style1.css
+++ b/TP/TP6/css/style1.css
@@ -46,7 +46,7 @@ nav a{
     color: #fff;
     text-transform: uppercase;
     font-size: 15px;
-}
+}b
 .table{
     display: table;
     margin: 0 auto;
